# emerge_2023_langchain_project

./: README.md  pyproject.toml
src/: __init__.py  smoketest.py
src/examples/: _1.py  _10.py  _2.py  _3.py  _4.py  _6.py  _7.py  _8.py  _9.py  __init__.py
src/examples/chat_models/getting_started/: _1.py  _2.py  _3.py  _4.py
src/examples/chat_models/how_to/: _1.py  _2.py  _3.py
src/examples/getting_started/: _10.py  _5.py  _7.py  _8.py
src/examples/indexers/getting_started/: _1.py  _2.py
src/examples/models/: llms_1.py  llms_2.py  llms_3.py  llms_4.py  llms_5.py  llms_6.py  llms_7.py  llms_8.py  llms_9.py
src/examples/prompts/: _1.py  _2.py  _3.py
src/examples/prompts/how_to/: _1.py  _2.py  _3.py  _4.py  _5.py  _6.py  _7.py  examples.yaml  few_shot_prompt.yaml  simple_prompt_with_template_file.json
src/examples/prompts/output_parsers/: _1.py  _2.py  _3.py  _4.py  _5.py  _6.py
src/examples/prompts/selectors/: _1.py  _2.py  _3.py  _4.py  _5.py
src/examples/text_splitters/: _1.py  _2.py  _3.py  _4.py  _5.py  _6.py  _7.py  _8.py  _9.py
