[tool.poetry]
name = "langchain-project"
version = "0.1.0"
description = ""
authors = ["a <a@a.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.137"
openai = "^0.27.4"
google-search-results = "^2.4.2"

[tool.poetry.scripts]
main = "src.smoketest:main" # like the `scripts` key in package.json files
test = "src.examples.getting_started._1:main"
nxt_lvl = "src.examples.models.llms_5:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
