[tool.poetry]
name = "langchain-project"
version = "0.1.0"
description = ""
authors = ["a <a@a.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.137"
openai = "^0.27.4"
google-search-results = "^2.4.2"
chromadb = "^0.3.21"
tiktoken = "^0.3.3"
faiss-cpu = "^1.7.3"

[tool.poetry.scripts]
main = "src.smoketest:main" # like the `scripts` key in package.json files
test = "src.examples.getting_started._1:main"
nxt_lvl = "src.examples.models.llms_9:main"
chat_lvl = "src.examples.chat_models.how_to._3:main"
prompt_lvl = "src.examples.prompts._3:main"
prompt_lvl_2 = "src.examples.prompts.how_to._7:main"
selectors = "src.examples.prompts.selectors._5:main"
output_parsers = "src.examples.prompts.output_parsers._2:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
